--- a/AetherEssentials/pom.xml
+++ b/AetherEssentials/pom.xml
@@ -41,7 +41,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <outputDirectory>../PaperServer/plugins</outputDirectory>
+                    <outputDirectory>../../PaperServer/plugins</outputDirectory>
                 </configuration>
             </plugin>
             <plugin>
