--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,26 @@
                 <scope>provided</scope>
             </dependency>
 
+            <!-- Logging -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.2.9</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-to-slf4j</artifactId>
+                <version>2.17.0</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jul-to-slf4j</artifactId>
+                <version>1.7.32</version>
+                <scope>compile</scope>
+            </dependency>
+
             <!-- Testing Dependencies -->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
