--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>SpigotPluginAnnotations</module>
         <module>AetherEssentials</module>
         <module>SnakeYamlTesting</module>
+        <module>AetherLogging</module>
     </modules>
 
     <properties>
@@ -36,6 +37,11 @@
             <dependency>
                 <groupId>com.github.aetherial</groupId>
                 <artifactId>spigot-plugin-annotations</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.aetherial</groupId>
+                <artifactId>aether-logging</artifactId>
                 <version>${revision}</version>
             </dependency>
 
@@ -83,12 +89,6 @@
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-to-slf4j</artifactId>
                 <version>2.17.0</version>
-                <scope>compile</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>jul-to-slf4j</artifactId>
-                <version>1.7.32</version>
                 <scope>compile</scope>
             </dependency>
 
