--- a/pom.xml
+++ b/pom.xml
@@ -80,16 +80,22 @@
 
             <!-- Logging -->
             <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-classic</artifactId>
-                <version>1.2.9</version>
-                <scope>compile</scope>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>2.17.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-to-slf4j</artifactId>
+                <artifactId>log4j-core</artifactId>
                 <version>2.17.0</version>
-                <scope>compile</scope>
+            </dependency>
+            <!--
+            Maven: https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl
+            -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>2.17.0</version>
             </dependency>
 
             <!-- Testing Dependencies -->
