--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             <dependency>
                 <groupId>com.github.AetherialMist</groupId>
                 <artifactId>SpigotPluginAnnotations</artifactId>
-                <version>release-1.0.3-SNAPSHOT</version>
+                <version>1.1.0</version>
             </dependency>
             <dependency>
                 <groupId>com.github.AetherialMist</groupId>
